--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
 *.pdf filter=lfs diff=lfs merge=lfs -text
 *.exe filter=lfs diff=lfs merge=lfs -text
 *.jpg filter=lfs diff=lfs merge=lfs -text
+pwn/race/docker/bin/race filter=lfs diff=lfs merge=lfs -text
+pwn/race/challenge filter=lfs diff=lfs merge=lfs -text
